--- a/public/navbar.html
+++ b/public/navbar.html
@@ -75,6 +75,16 @@ _________________________________________________________ -->
                         </li>
                     </ul>
                 </li>
+                <li id="searchBox">
+                    <form class="form-inline" method="get" action="category.html">
+                      <div class="form-group">
+                        <div class="input-group">
+                          <input type="text" class="form-control" name="q" placeholder="Search">
+                        </div>
+                      </div>
+                      <button type="submit" class="btn btn-primary">Search</button>
+                    </form>
+                </li>
                 <li id="tabAccount"><a href="customer-orders.html">Account</a>
                 </li>
                 <!--<li class="dropdown yamm-fw">-->
