Add search page

--- a/public/navbar.html
+++ b/public/navbar.html
@@ -76,7 +76,7 @@ _________________________________________________________ -->
                     </ul>
                 </li>
                 <li id="searchBox">
-                    <form class="form-inline" method="get" action="category.html">
+                    <form class="form-inline" method="get" action="search.html">
                       <div class="form-group">
                         <div class="input-group">
                           <input type="text" class="form-control" name="q" placeholder="Search">
